[gd_scene load_steps=4 format=3 uid="uid://dceq41df18pgl"]

[ext_resource type="Script" uid="uid://4bs3ipw30rbe" path="res://scripts/sfx_manager.gd" id="1_wd8mt"]
[ext_resource type="AudioStream" uid="uid://bd5dvh6chht6d" path="res://assets/sfx/monster_die.wav" id="2_gx34h"]
[ext_resource type="AudioStream" uid="uid://c2ud4pnu0ytm6" path="res://assets/sfx/revolver_shot1.wav" id="3_a4b8v"]

[node name="SFXManager" type="Node3D"]
script = ExtResource("1_wd8mt")

[node name="BruteAttack" type="AudioStreamPlayer3D" parent="."]

[node name="BruteDie" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_gx34h")

[node name="BruteHurt" type="AudioStreamPlayer3D" parent="."]

[node name="GunnerShoot" type="AudioStreamPlayer3D" parent="."]

[node name="GunnerDie" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_gx34h")

[node name="GunnerHurt" type="AudioStreamPlayer3D" parent="."]

[node name="BomberThrow" type="AudioStreamPlayer3D" parent="."]

[node name="BomberDie" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_gx34h")

[node name="BomberHurt" type="AudioStreamPlayer3D" parent="."]

[node name="BulletHit" type="AudioStreamPlayer3D" parent="."]

[node name="Explosion" type="AudioStreamPlayer3D" parent="."]

[node name="PlayerRevolverShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a4b8v")

[node name="PlayerShotgunShoot" type="AudioStreamPlayer" parent="."]

[node name="PlayerDash" type="AudioStreamPlayer" parent="."]

[node name="PlayerHurt" type="AudioStreamPlayer" parent="."]

[node name="PlayerDie" type="AudioStreamPlayer" parent="."]
